--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <div class="content">
             <ul id="list">
-                <li class="item">
-                   <!--  <i class="fa fa-circle-thin" job="complete" id="0"></i>
+               <!--  <li class="item">
+                    <i class="fa fa-circle-thin" job="complete" id="0"></i>
                     <p class="text"></p>
-                    <i class="fa fa-trash-o" job="delete" id="0"></i>-->
-                </li>
+                    <i class="fa fa-trash-o" job="delete" id="0"></i>
+                </li>-->
             </ul>
         </div>
         <div class="add-to-do">
