--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="container">
         <div class="header">
             <div class="clear">
-                <i class="fa fa-refresh"></i>
+                <i class="fa fa-refresh" aria-hidden="true"></i>
             </div>
             <div id="date"></div>
         </div>
         <div class="content">
             <ul id="list">
-               <!--  <li class="item">
-                    <i class="fa fa-circle-thin" job="complete" id="0"></i>
+              <!--  <li class="item">
+                    <i class="fa fa-circle-thin complete" job="complete" id="0"></i>
                     <p class="text"></p>
-                    <i class="fa fa-trash-o" job="delete" id="0"></i>
+                    <i class="fa fa-trash-o delete" job="delete" id="0"></i>
                 </li>-->
             </ul>
         </div>
         <div class="add-to-do">
-            <i class="fa fa-plus-circle"></i>
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
             <input type="text" id="input" placeholder="Add a to-do">
         </div>
     </div>
